[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchaingang"
version = "0.1.0"
description = "A unified interface for LangChain chat model providers"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["langchain", "llm", "ai", "chat", "providers"]
requires-python = ">=3.9"
dependencies = [
    "langchain-core>=0.1.0",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.1.0"]
anthropic = ["langchain-anthropic>=0.1.0"]
aws = ["langchain-aws>=0.1.0"]
google = ["langchain-google-vertexai>=0.1.0", "langchain-google-genai>=0.1.0"]
all = [
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-aws>=0.1.0",
    "langchain-google-vertexai>=0.1.0",
    "langchain-google-genai>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/langchaingang"
Repository = "https://github.com/yourusername/langchaingang"
Documentation = "https://github.com/yourusername/langchaingang#readme"
Issues = "https://github.com/yourusername/langchaingang/issues"

[tool.hatch.version]
path = "langchaingang/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["langchaingang"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=langchaingang --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["langchaingang"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "langchain_openai.*",
    "langchain_anthropic.*",
    "langchain_aws.*",
    "langchain_google_vertexai.*",
    "langchain_google_genai.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
